# Paper

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 01-2023_07_23_2315-all_tables.py
app/: constants.py  main.py
app/api/: routers.py  user.py
app/api/v1/: auto.py  digest.py  fill_db.py  post.py  routers.py  source.py  subscription.py  validators.py
app/core/: alembic_base.py  config.py  user.py
app/crud/: base.py  digest.py  post.py  source.py  subscription.py
app/models/: __init__.py  digest.py  post.py  source.py  subscription.py  user.py
app/schemas/: digest.py  post.py  source.py  subscription.py  user.py
