[tool.poetry]
name = "paper"
version = "0.1.0"
description = ""
authors = ["Artem Nosov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.78.0"
asyncpg = "0.27.0"
sqlalchemy = "1.4.36"
alembic = "1.7.7"
uvicorn = {version = "0.17.6", extras = ["standard"]}
fastapi-users = {version = "10.0.6", extras = ["sqlalchemy"]}

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
